--- a/astudio/gradle/libs.versions.toml
+++ b/astudio/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
 agp = "8.9.1"
+androidxJunit = "1.2.1"
 compiler = "4.16.0"
+espressoCoreVersion = "3.6.1"
+fragmentTesting = "1.8.6"
 glide = "4.15.1"
 glideVersion = "4.16.0"
 junit = "4.13.2"
@@ -14,8 +17,12 @@ constraintlayout = "2.1.4"
 appcompatVersion = "1.7.0"
 retrofit = "2.9.0"
 navigationRuntime = "2.8.9"
+espressoContrib = "3.6.1"
 
 [libraries]
+androidx-espresso-core-v361 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+androidx-fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentTesting" }
+androidx-junit-v121 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 compiler-v4160 = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -32,6 +39,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompatVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-navigation-runtime = { group = "androidx.navigation", name = "navigation-runtime", version.ref = "navigationRuntime" }
+androidx-espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espressoContrib" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
