--- a/astudio/gradle/libs.versions.toml
+++ b/astudio/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ agp = "8.9.1"
 androidxJunit = "1.2.1"
 compiler = "4.16.0"
 espressoCoreVersion = "3.6.1"
+firebaseBom = "33.12.0"
+firebaseFirestore = "25.1.3"
 fragmentTesting = "1.8.6"
 glide = "4.15.1"
 glideVersion = "4.16.0"
@@ -18,6 +20,7 @@ appcompatVersion = "1.7.0"
 retrofit = "2.9.0"
 navigationRuntime = "2.8.9"
 espressoContrib = "3.6.1"
+firebaseAuth = "23.2.0"
 
 [libraries]
 androidx-espresso-core-v361 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
@@ -26,6 +29,8 @@ androidx-junit-v121 = { module = "androidx.test.ext:junit", version.ref = "andro
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 compiler-v4160 = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestore" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-v4160 = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -40,6 +45,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-navigation-runtime = { group = "androidx.navigation", name = "navigation-runtime", version.ref = "navigationRuntime" }
 androidx-espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espressoContrib" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
