--- a/astudio/gradle/libs.versions.toml
+++ b/astudio/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ espressoCoreVersion = "3.6.1"
 firebaseBom = "33.12.0"
 firebaseFirestore = "25.1.3"
 fragmentTesting = "1.8.6"
+fragmentTestingVersion = "1.5.6"
 glide = "4.15.1"
 glideVersion = "4.16.0"
 junit = "4.13.2"
@@ -25,6 +26,7 @@ firebaseAuth = "23.2.0"
 [libraries]
 androidx-espresso-core-v361 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
 androidx-fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentTesting" }
+androidx-fragment-testing-v156 = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentTestingVersion" }
 androidx-junit-v121 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 compiler-v4160 = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
